- HTML - added favicon; - CSS - pokéball is more beautiful; - JS - search with enter; search despite whitespaces; resetSearch check searching; bugfix search: correct rendering search results; show 20/20 loaded by timeout;

--- a/style.css
+++ b/style.css
@@ -106,10 +106,10 @@ main {
 }
 
 .pokéball {
-  height: 7.5vmin;
-  width: 7.5vmin;
+  height: 80px;
+  width: 80px;
   border-radius: 50%;
-  border: 0.45vmin solid black;
+  border: 5.5px solid black;
   background-image:
     radial-gradient(white 20%, white 20%, black 22%, black 28%, transparent 30%, transparent),
     linear-gradient(red 46%, black 46%, black 54%, white 54%);
@@ -121,8 +121,8 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 1.5vmin;
-  width: 1.5vmin;
+  height: 15px;
+  width: 15px;
   border-radius: 50%;
   border: solid 1px black;
   background-color: white;
